<resources>
    <string name="superuser">Superuser</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="device_info_default">Unknown</string>
    <string name="bluetooth_dock_settings_a2dp">For music and media</string>
    <string name="sound_settings">Sound</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="all_volume_title">Volumes</string>
    <string name="musicfx_title">Music effects</string>
    <string name="notification_sound_title">Default notification sound</string>
    <string name="notification_sound_dialog_title">Default notification sound</string>
    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
    <string name="sound_effects_enable_title">Touch sounds</string>
    <string name="lock_sounds_enable_title">Screen lock sound</string>
    <string name="haptic_feedback_enable_title">Vibrate on touch</string>
    <string name="camera_sounds_title">Camera shutter sound</string>
    <string name="camera_sounds_summary">WARNING: Disabling the camera shutter sound is illegal in some areas!</string>
    <string name="vibrate_when_ringing_title">Vibrate when ringing</string>
    <string name="dock_settings">Dock</string>
    <string name="dock_audio_settings_title">Audio</string>
    <string name="dock_sounds_enable_title">Dock insert sound</string>
    <string name="hardware_info">Hardware info</string>
    <string name="device_rear_camera">Rear camera</string>
    <string name="device_front_camera">Front facing camera</string>
    <string name="device_screen_resolution">Screen resolution</string>
    <string name="gpu_info">GPU</string>
    <string name="cpu_info">CPU</string>
    <string name="chipset_info">Chipset</string>
    <string name="mem_info">Memory</string>
    <string name="firmware_version">Android version</string>
    <string name="model_number">Model number</string>
    <string name="fcc_equipment_id">Equipment ID</string>
    <string name="baseband_version">Baseband version</string>
    <string name="kernel_version">Kernel version</string>
    <string name="build_number">Build number</string>
    <string name="selinux_status">SELinux status</string>
    <string name="device_status">Status</string>
    <string name="device_status_summary">Phone number, signal, etc.</string>
    <string name="about_settings">About phone</string>
    <string name="legal_information">Legal information</string>
    <string name="regulatory_information">Regulatory information</string>
    <string name="copyright_title">Copyright</string>
    <string name="license_title">License</string>
    <string name="terms_title">Terms and conditions</string>
    <string name="settings_safetylegal_title">Safety information</string>
    <string name="emergency_tone_title">Emergency tone</string>
    <string name="sound_category_call_ringtone_vibrate_title">Call ringtone &amp; vibrate</string>
    <string name="sound_category_system_title">System</string>
    <string name="additional_system_update_settings_list_item_title">Additional system updates</string>
    <string name="selinux_status_enforcing">Enforcing</string>
    <string name="rootbox_settings_title">MiBox Settings</string>
    <string name="rb_version">MiBox version</string>
    <string name="mod_version_default">Unknown</string>
    <string name="anonymous_statistics_title">MiBox Statistics</string>
    <string name="anonymous_statistics_summary">Help make MiBox better by opting into anonymous statistics reporting</string>
    <string name="quiet_hours_title">Quiet hours</string>
    <string name="quiet_hours_enabled_title">Enable quiet hours</string>
    <string name="quiet_hours_notifications_title">Mute notification sounds</string>
    <string name="quiet_hours_ringer_title">Mute phone ringtones</string>
    <string name="quiet_hours_still_title">Disable vibrations</string>
    <string name="quiet_hours_dim_title">Disable notification light</string>
    <string name="clock_header">Clock</string>
    <string name="sound_header">Sound</string>
    <string name="lockscreen_header">Lockscreen</string>
    <string name="statusbar_header">StatusBar &amp; Notification Drawer</string>
    <string name="general_ui_header">General UI</string>
    <string name="keyboard_header">Keyboard</string>
    <string name="hardware_keys_header">Hardware Keys</string>
    <string name="recents_header">Recents</string>
    <string name="lock_clock_title">cLock</string>
    <string name="lock_clock_summary">"View or change how the 'cLock' Home and Lock screen widgets will display"</string>
    <string name="halo_settings_title">HALO</string>
    <string name="halo_settings_summary">Configure halo options</string>
    <string name="lockscreen_buttons_title">Button actions</string>
    <string name="lockscreen_buttons_summary">View or change lock screen button actions</string>
    <string name="screen_security_category">Screen security</string>
    <string name="screen_security_summary">View or change lock screen security, delay and timeout settings</string>
    <string name="volume_overlay_title">Volume panel style</string>
    <string name="headset_connect_player_title">Headset</string>
    <string name="headset_connect_player_summary">Launch music app on headset connection</string>
    <string name="swap_volume_keys_title">Swap volume buttons</string>
    <string name="swap_volume_keys_summary">Swap volume buttons when the screen is rotated by 90 or 180 degrees</string>
    <string name="volume_adjust_sounds_enable_title">Volume adjust sound</string>
    <string name="volume_adjust_sounds_enable_summary">Play sound when adjusting volume with hard keys</string>
    <string name="vibration_title">Phone vibration</string>
    <string name="safe_headset_volume_title">Safe headset volume</string>
    <string name="pie_controls_title">Pie controls</string>
    <string name="pie_controls_summary">Allows navigation and status report</string>
    <string name="pie_targets_title">Targets</string>
    <string name="pie_gravity_title">Pie gravity</string>
    <string name="pie_gravity_summary">Select the location where Pie will be placed at</string>
    <string name="pie_mode_title">Pie style</string>
    <string name="pie_mode_summary">Manage how animations and status additions will be handled</string>
    <string name="pie_size_title">Pie size</string>
    <string name="pie_size_summary">Define Pie controls size</string>
    <string name="pie_angle_title">Bottom angle</string>
    <string name="pie_angle_summary">"Adjust the angle between screen's edge and pie"</string>
    <string name="pie_gap_title">Item gap</string>
    <string name="pie_gap_summary">Adjust the gap that separates pie elements</string>
    <string name="pie_center_title">Middle alignment</string>
    <string name="pie_center_summary">Center pie on the trigger edge</string>
    <string name="pie_trigger_title">Trigger size</string>
    <string name="pie_trigger_summary">Determine the size of the triggering area that will start pie controls</string>
    <string name="pie_notifications_title">Enable Chevron Targets</string>
    <string name="pie_notifications_summary">Enabling will let the Notification panel and QuickSettings activate when swiped</string>
    <string name="pie_menu_title">Show menu button always</string>
    <string name="pie_menu_summary">Whether or not the menu button will appear when unneeded</string>
    <string name="pie_search_title">Show search button</string>
    <string name="pie_search_summary">Access to GoogleNow via Pie</string>
    <string name="pie_lastapp_title">Last App button</string>
    <string name="pie_lastapp_summary">Enable last app button on Pie</string>
    <string name="pie_killtask_title">Kill task button</string>
    <string name="pie_killtask_summary">Enable kill task button on Pie</string>
    <string name="pie_appwindow_title">App window button</string>
    <string name="pie_appwindow_summary">Enable app window button on Pie (configure app window in Ribbon settings)</string>
    <string name="pie_stick_title">Prevent rotation</string>
    <string name="pie_stick_summary">If checked Pie will stay in place no matter which orientation</string>
    <string name="pie_restart_launcher_title">Restart Launcher</string>
    <string name="pie_restart_launcher_summary">Allows your launcher to regain sanity after a screensize change (recommended)</string>
    <string name="volume_key_cursor_control_title">Volume key cursor control</string>
    <string name="increasing_ring_title">Ascending ringtone</string>
    <string name="pref_low_battery_warning_policy_title">Low battery warning</string>
    <string name="pref_home_wake_title">Home button</string>
    <string name="pref_home_wake_summary">Pressing the home button will wake your device</string>
    <string name="recents_kill_all">Kill-All</string>
    <string name="recents_style">Style</string>
    <string name="pac_status_title">Battery PAC</string>
    <string name="pac_status_summary">Enable or disable per-app color for battery icons.</string>
    <string name="mms_breath">Breathing SMS</string>
    <string name="mms_breath_summary">Will give your sms notifications a breathing effect on the statusbar.</string>
    <string name="missed_call_breath">Breathing missed call</string>
    <string name="missed_call_breath_summary">Will give your missed call notifications a breathing effect on the statusbar.</string>
    <string name="show_enter_key_title">Show enter key</string>
    <string name="show_enter_key_summary">Force keyboard to show enter instead of emoticon key</string>
    <string name="fullscreen_keyboard">Disable fullscreen keyboard</string>
    <string name="fullscreen_keyboard_summary">Will allow you to read the message your typing while in landscape mode.</string>
    <string name="lockscreen_seethrough">Lockscreen see through</string>
    <string name="lockscreen_seethrough_summary">Allows you to see your homescreen behind the lock screen including apps.</string>
    <string name="status_bar_icon_opacity">Notification icon opacity</string>
    <string name="status_bar_icon_opacity_summary">Sets opacity of status bar notification icons</string>
    <string name="notification_behaviour_title">Notification behaviour</string>
    <string name="notification_show_wifi_ssid_title">Show wifi network name</string>
    <string name="notification_show_wifi_ssid_summary">Display the name of the currently connected Wifi network</string>
    <string name="volume_keys_control_ring_stream">Media control</string>
    <string name="volume_keys_control_ring_stream_summary">Volume keys control media volume rather than ringer</string>
    <string name="keyboard_rotation_toggle_title">Auto keyboard rotation</string>
    <string name="keyboard_rotation_toggle_summary">Force auto-rotate when keyboard is shown</string>
    <string name="keyboard_rotation_timeout_title">Auto-rotate timeout</string>
    <string name="notification_shortcuts_settings_title">Notification shortcuts</string>
    <string name="notification_shortcuts_settings_summary">Show shortcuts in the notification drawer</string>
    <string name="hardware_keys_title">Hardware Keys</string>
    <string name="hardware_keys_summary">Change hardware keys actions</string>
    <string name="power_widget">Powerwidget</string>
    <string name="power_widget_summary">Customize the elements of powerwidget.</string>
    <string name="lockscreen_custom_background_title">Background</string>
    <string name="power_notifications_category_title">Power sounds</string>
    <string name="power_notifications_enable_title">Enable</string>
    <string name="power_notifications_vibrate_title">Vibrate</string>
    <string name="power_notifications_ringtone_title">Notification sound</string>
</resources>