<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/about_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/additional_system_update_settings_list_item_title" android:key="additional_system_update_settings">
        <intent android:targetPackage="@string/additional_system_update" android:action="android.intent.action.MAIN" android:targetClass="@string/additional_system_update_menu" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/device_status" android:key="status_info" android:summary="@string/device_status_summary">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.deviceinfo.Status" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/anonymous_statistics_title" android:key="rbstats" android:summary="@string/anonymous_statistics_summary" android:fragment="com.android.settings.rbstats.AnonymousStats" />
    <PreferenceScreen android:title="@string/legal_information" android:key="container">
        <PreferenceScreen android:title="@string/copyright_title" android:key="copyright">
            <intent android:action="android.settings.COPYRIGHT" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/license_title" android:key="license">
            <intent android:action="android.settings.LICENSE" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/terms_title" android:key="terms">
            <intent android:action="android.settings.TERMS" />
        </PreferenceScreen>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/hardware_info" android:key="hardware_info">
        <Preference android:title="@string/chipset_info" android:key="device_chipset" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
        <Preference android:title="@string/cpu_info" android:key="device_cpu" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
        <Preference android:title="@string/gpu_info" android:key="device_gpu" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
        <Preference android:title="@string/mem_info" android:key="device_memory" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
        <Preference android:title="@string/device_rear_camera" android:key="device_rear_camera" style="?android:preferenceInformationStyle" />
        <Preference android:title="@string/device_front_camera" android:key="device_front_camera" style="?android:preferenceInformationStyle" />
        <Preference android:title="@string/device_screen_resolution" android:key="device_screen_resolution" style="?android:preferenceInformationStyle" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/settings_safetylegal_title" android:key="safetylegal">
        <intent android:action="android.settings.SAFETY" />
    </PreferenceScreen>
    <com.android.settings.RegulatoryInfoPreference android:title="@string/regulatory_information" android:key="regulatory_info" />
    <Preference android:title="@string/model_number" android:key="device_model" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/firmware_version" android:key="firmware_version" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/fcc_equipment_id" android:key="fcc_equipment_id" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/baseband_version" android:key="baseband_version" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/kernel_version" android:key="kernel_version" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/rb_version" android:key="mod_version" android:summary="@string/mod_version_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/build_number" android:key="build_number" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/selinux_status" android:key="selinux_status" android:summary="@string/selinux_status_enforcing" style="?android:preferenceInformationStyle" />
</PreferenceScreen>