<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/rootbox_settings_title"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <PreferenceCategory android:title="@string/general_ui_header" android:key="rb_general_ui">
        <PreferenceScreen android:icon="@drawable/ic_rb_pie" android:title="@string/pie_controls_title" android:key="pie_control" android:summary="@string/pie_controls_summary" android:fragment="com.android.settings.paranoid.Pie" />
        <PreferenceScreen android:icon="@drawable/ic_rb_halo" android:title="@string/halo_settings_title" android:key="halo" android:summary="@string/halo_settings_summary" android:fragment="com.android.settings.paranoid.Halo" />
        <ListPreference android:icon="@drawable/ic_rb_battery_warning" android:entries="@array/pref_low_battery_warning_policy_entries" android:title="@string/pref_low_battery_warning_policy_title" android:key="pref_low_battery_warning_policy" android:defaultValue="3" android:entryValues="@array/pref_low_battery_warning_policy_values" />
        <CheckBoxPreference android:icon="@drawable/ic_rb_battery_pac" android:title="@string/pac_status_title" android:key="pac_status" android:summary="@string/pac_status_summary" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/recents_header" android:key="rb_recents">
        <ListPreference android:icon="@drawable/ic_rb_recents" android:entries="@array/recents_clear_entries" android:title="@string/recents_kill_all" android:key="pref_recents_clear" android:defaultValue="0" android:entryValues="@array/recents_clear_values" />
        <ListPreference android:icon="@drawable/ic_rb_recent_style" android:entries="@array/recents_style_entries" android:title="@string/recents_style" android:key="pref_recents_style" android:defaultValue="0" android:entryValues="@array/recents_style_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/keyboard_header" android:key="rb_keyboard">
        <CheckBoxPreference android:icon="@drawable/ic_rb_keyboard_enter" android:persistent="false" android:title="@string/show_enter_key_title" android:key="show_enter_key" android:summary="@string/show_enter_key_summary" />
        <CheckBoxPreference android:icon="@drawable/ic_rb_keyboard" android:title="@string/fullscreen_keyboard" android:key="fullscreen_keyboard" android:summary="@string/fullscreen_keyboard_summary" android:defaultValue="false" />
        <CheckBoxPreference android:icon="@drawable/ic_rb_keyboard_rotate" android:persistent="false" android:title="@string/keyboard_rotation_toggle_title" android:key="keyboard_rotation_toggle" android:summary="@string/keyboard_rotation_toggle_summary" android:defaultValue="false" />
        <ListPreference android:icon="@drawable/ic_rb_keyboard_timeout" android:persistent="false" android:entries="@array/keyboard_rotation_timeout_entries" android:title="@string/keyboard_rotation_timeout_title" android:key="keyboard_rotation_timeout" android:dependency="keyboard_rotation_toggle" android:dialogTitle="@string/keyboard_rotation_timeout_title" android:entryValues="@array/keyboard_rotation_timeout_values" />
        <ListPreference android:icon="@drawable/ic_rb_cursor" android:persistent="false" android:entries="@array/volume_key_cursor_control_entries" android:title="@string/volume_key_cursor_control_title" android:key="volume_key_cursor_control" android:dialogTitle="@string/volume_key_cursor_control_title" android:entryValues="@array/volume_key_cursor_control_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/lockscreen_header" android:key="rb_lockscreen">
        <CheckBoxPreference android:icon="@drawable/ic_rb_lock_alpha" android:title="@string/lockscreen_seethrough" android:key="see_through" android:summary="@string/lockscreen_seethrough_summary" />
        <ListPreference android:icon="@drawable/ic_rb_lock_wallpaper" android:persistent="false" android:entries="@array/lockscreen_background_entries" android:title="@string/lockscreen_custom_background_title" android:key="lockscreen_background" android:dialogTitle="@string/lockscreen_custom_background_title" android:entryValues="@array/lockscreen_background_values" />
        <PreferenceScreen android:icon="@drawable/ic_rb_lock_security" android:title="@string/screen_security_category" android:key="screen_security" android:summary="@string/screen_security_summary" android:fragment="com.android.settings.SecuritySettings">
            <extra android:name="cm_security" android:value="true" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/statusbar_header" android:key="rb_statusbar">
        <CheckBoxPreference android:icon="@drawable/ic_rb_breath_sms" android:title="@string/mms_breath" android:key="mms_breath" android:summary="@string/mms_breath_summary" android:defaultValue="false" />
        <CheckBoxPreference android:icon="@drawable/ic_rb_breath_missed_call" android:title="@string/missed_call_breath" android:key="missed_call_breath" android:summary="@string/missed_call_breath_summary" android:defaultValue="false" />
        <CheckBoxPreference android:icon="@drawable/ic_rb_notification_wifi" android:title="@string/notification_show_wifi_ssid_title" android:key="notification_show_wifi_ssid" android:summary="@string/notification_show_wifi_ssid_summary" android:defaultValue="false" />
        <PreferenceScreen android:icon="@drawable/ic_rb_notification_shortcuts" android:id="@id/slim_notification_shortcuts" android:title="@string/notification_shortcuts_settings_title" android:key="slim_shortcuts_settings" android:summary="@string/notification_shortcuts_settings_summary" android:fragment="com.android.settings.slim.notificationshortcuts.NotificationShortcuts" />
        <ListPreference android:icon="@drawable/ic_rb_notification_behaviour" android:entries="@array/notifs_beh_entries" android:title="@string/notification_behaviour_title" android:key="notifications_behaviour" android:entryValues="@array/notifs_beh_values" />
        <ListPreference android:icon="@drawable/ic_rb_notification_opacity" android:entries="@array/status_bar_icon_opacity_entries" android:title="@string/status_bar_icon_opacity" android:key="status_bar_icon_opacity" android:summary="@string/status_bar_icon_opacity_summary" android:defaultValue="140" android:dialogTitle="@string/status_bar_icon_opacity" android:entryValues="@array/status_bar_icon_opacity_values" />
        <PreferenceScreen android:icon="@drawable/ic_rb_powerwidget" android:id="@id/power_widget_settings" android:title="@string/power_widget" android:summary="@string/power_widget_summary" android:fragment="com.android.settings.cyanogenmod.PowerWidget" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/clock_header" android:key="rb_clock">
        <PreferenceScreen android:icon="@drawable/ic_rb_clock" android:title="@string/lock_clock_title" android:key="lock_clock" android:summary="@string/lock_clock_summary">
            <intent android:targetPackage="com.cyanogenmod.lockclock" android:action="android.intent.action.MAIN" android:targetClass="com.cyanogenmod.lockclock.preference.Preferences" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/sound_header" android:key="rb_sound">
        <ListPreference android:icon="@drawable/ic_rb_volume_panel" android:entries="@array/volume_overlay_entries" android:title="@string/volume_overlay_title" android:key="volume_overlay" android:entryValues="@array/volume_overlay_values" />
        <CheckBoxPreference android:icon="@drawable/ic_rb_headset" android:persistent="false" android:title="@string/headset_connect_player_title" android:key="headset_connect_player" android:summary="@string/headset_connect_player_summary" />
        <CheckBoxPreference android:icon="@drawable/ic_rb_sound" android:persistent="true" android:title="@string/volume_adjust_sounds_enable_title" android:key="volume_adjust_sounds" android:summary="@string/volume_adjust_sounds_enable_summary" />
        <CheckBoxPreference android:icon="@drawable/ic_rb_volume_swap" android:title="@string/swap_volume_keys_title" android:key="swap_volume_buttons" android:summary="@string/swap_volume_keys_summary" />
        <CheckBoxPreference android:icon="@drawable/ic_rb_sound" android:title="@string/volume_keys_control_ring_stream" android:key="volume_keys_control_ring_stream" android:summary="@string/volume_keys_control_ring_stream_summary" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/hardware_keys_header" android:key="rb_hardware_keys">
        <CheckBoxPreference android:icon="@drawable/ic_rb_home_wake" android:title="@string/pref_home_wake_title" android:key="pref_home_wake" android:summary="@string/pref_home_wake_summary" android:defaultValue="true" />
        <PreferenceScreen android:icon="@drawable/ic_rb_hardware_keys" android:title="@string/hardware_keys_title" android:key="hardware_keys" android:summary="@string/hardware_keys_summary" android:fragment="com.android.settings.cyanogenmod.HardwareKeys" />
        <PreferenceScreen android:icon="@drawable/ic_rb_lockscreen" android:title="@string/lockscreen_buttons_title" android:key="lockscreen_buttons" android:summary="@string/lockscreen_buttons_summary" android:fragment="com.android.settings.cyanogenmod.LockscreenButtons" />
    </PreferenceCategory>
</PreferenceScreen>