<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/sound_settings" android:key="sound_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <com.android.settings.RingerVolumePreference android:persistent="false" android:title="@string/all_volume_title" android:key="ring_volume" android:dialogTitle="@string/all_volume_title" android:streamType="ring" />
    <Preference android:title="@string/musicfx_title" android:key="musicfx" />
    <PreferenceScreen android:title="@string/quiet_hours_title" android:key="quiet_hours" android:fragment="com.android.settings.QuietHours" />
    <PreferenceCategory android:title="@string/sound_category_call_ringtone_vibrate_title" android:key="category_calls_and_notification" />
    <com.android.settings.DefaultRingtonePreference android:persistent="false" android:title="@string/ringtone_title" android:key="ringtone" android:dialogTitle="@string/ringtone_title" android:ringtoneType="ringtone" />
    <CheckBoxPreference android:persistent="false" android:title="@string/vibrate_when_ringing_title" android:key="vibrate_when_ringing" />
    <Preference android:persistent="false" android:title="@string/vibration_title" android:key="vibration" android:dependency="vibrate_when_ringing" android:defaultValue="false" />
    <com.android.settings.IncreasingRingPreference android:persistent="false" android:title="@string/increasing_ring_title" android:key="increasing_ring" android:dialogTitle="@string/increasing_ring_title" android:streamType="ring" />
    <PreferenceCategory android:title="@string/sound_category_system_title" />
    <com.android.settings.DefaultRingtonePreference android:persistent="false" android:title="@string/notification_sound_title" android:key="notification_sound" android:dialogTitle="@string/notification_sound_dialog_title" android:ringtoneType="notification" />
    <CheckBoxPreference android:title="@string/dtmf_tone_enable_title" android:key="dtmf_tone" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/sound_effects_enable_title" android:key="sound_effects" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/lock_sounds_enable_title" android:key="lock_sounds" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/haptic_feedback_enable_title" android:key="haptic_feedback" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/camera_sounds_title" android:key="camera_sounds" android:summary="@string/camera_sounds_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/safe_headset_volume_title" android:key="safe_headset_volume" android:defaultValue="true" />
    <ListPreference android:entries="@array/emergency_tone_entries" android:title="@string/emergency_tone_title" android:key="emergency_tone" android:entryValues="@array/emergency_tone_values" />
    <PreferenceCategory android:title="@string/dock_settings" android:key="dock_category" />
    <PreferenceScreen android:title="@string/dock_audio_settings_title" android:key="dock_audio">
        <CheckBoxPreference android:enabled="true" android:title="@string/bluetooth_dock_settings_a2dp" android:key="dock_audio_media_enabled" />
    </PreferenceScreen>
    <CheckBoxPreference android:title="@string/dock_sounds_enable_title" android:key="dock_sounds" android:defaultValue="false" />
    <PreferenceCategory android:title="@string/power_notifications_category_title" />
    <CheckBoxPreference android:persistent="false" android:title="@string/power_notifications_enable_title" android:key="power_notifications" android:defaultValue="false" />
    <CheckBoxPreference android:persistent="false" android:title="@string/power_notifications_vibrate_title" android:key="power_notifications_vibrate" android:dependency="power_notifications" android:defaultValue="false" />
    <Preference android:persistent="false" android:title="@string/power_notifications_ringtone_title" android:key="power_notifications_ringtone" android:dependency="power_notifications" />
</PreferenceScreen>